test/compile-fail/scope/use-self/expected.txt
error: `self` imports are only allowed within a { } list
 --> top.rhdl:2:8
  |
2 |     use self;
  |         ^^^^ 
